# custom-ssg

./: .gitmodules  Cargo.toml  first_post.html  index.html  test_post.html
blog/: building_rustful_apis.html  building_this_site.html  first_post.html  gentle_intro.html  index.html  posts.css  test_post.html
bloghtml/: first_post.html
markdown/: building_this_site.md  first_post.md  gentle_intro.md  index.md  test_post.md
src/: lib.rs  main.rs  posts.rs  push_str.rs  server.rs  templater.rs
templates/: posts.hbs
templates/code_themes/: dark.tmTheme  light.tmTheme
