[package]
name = "myblog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
handlebars = "4.3.6"
hyper = { version = "0.14.26", features = ["full"] }
pulldown-cmark = "0.9.2"
regex = "1.9.3"
serde = "1.0.160"
serde_json = "1.0.96"
serde_yaml = "0.9.21"
syntect = "5.1.0"
tokio = { version = "1.28.0", features = ["full"] }
